# fstools

./: .clang-format  meson.build  shell.nix
fstools/: fstools.h  getopt.h  pp.h  sync.h  types.h
src/: fat.c  fstools.c  getopt.c  sync.c
src/commands/: fstools.c
